5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1721_3068.log
== TEST (2019-05-02 19:08:21) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * S + D
sabr = S + 2 * D
if arma == CIMITARRA and(D>0) and(10>d1>1) amd(10>d2>1):
	print(cimi)
elif arma == KATANA:
	print(kata)
elif arma == SABRE:
	print(sabr)
else:
	print("Entrada invalida")


-- ERROR:
File "XXXX", line 9
    if arma == CIMITARRA and(D>0) and(10>d1>1) amd(10>d2>1):
                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:08:25) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * S + D
sabr = S + 2 * D
if arma == CIMITARRA and(D>0) and(10>d1>1) and(10>d2>1):
	print(cimi)
elif arma == KATANA:
	print(kata)
elif arma == SABRE:
	print(sabr)
else:
	print("Entrada invalida")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    kata = 2 * S + D
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:08:48) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == CIMITARRA and(D>0) and(10>d1>1) and(10>d2>1):
	print(cimi)
elif arma == KATANA:
	print(kata)
elif arma == SABRE:
	print(sabr)
else:
	print("Entrada invalida")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if arma == CIMITARRA and(D>0) and(10>d1>1) and(10>d2>1):
NameError: name 'CIMITARRA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:09:16) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ")
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == CIMITARRA and(D>0) and(10>d1>1) and(10>d2>1):
	print(cimi)
elif arma == KATANA:
	print(kata)
elif arma == SABRE:
	print(sabr)
else:
	print("Entrada invalida")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if arma == CIMITARRA and(D>0) and(10>d1>1) and(10>d2>1):
NameError: name 'CIMITARRA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:09:27) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ")
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == CIMITARRA and(D>0) and(10>d1>1) and(10>d2>1):
	print(cimi)
elif arma == KATANA:
	print(kata)
elif arma == SABRE:
	print(sabr)
else:
	print("Entrada invalida")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if arma == CIMITARRA and(D>0) and(10>d1>1) and(10>d2>1):
NameError: name 'CIMITARRA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:09:58) 
-- CODE:
arma = input(str.upper(("escolha sua arma (cimitarra/katana/sabre): "))
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == CIMITARRA and(D>0) and(10>d1>1) and(10>d2>1):
	print(cimi)
elif arma == KATANA:
	print(kata)
elif arma == SABRE:
	print(sabr)
else:
	print("Entrada invalida")


-- ERROR:
File "XXXX", line 2
    D = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:10:12) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ")
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == CIMITARRA and(D>0) and(10>d1>1) and(10>d2>1):
	print(cimi)
elif arma == KATANA:
	print(kata)
elif arma == SABRE:
	print(sabr)
else:
	print("Entrada invalida")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if arma == CIMITARRA and(D>0) and(10>d1>1) and(10>d2>1):
NameError: name 'CIMITARRA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:10:24) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ")
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == CIMITARRA and(D>0) and(10>d1>1) and(10>d2>1):
	print(cimi)
elif arma == KATANA:
	print(kata)
elif arma == SABRE:
	print(sabr)
else:
	print("Entrada invalida")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if arma == CIMITARRA and(D>0) and(10>d1>1) and(10>d2>1):
NameError: name 'CIMITARRA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:10:29) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ")
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == CIMITARRA and(D>0) and(10>d1>1) and(10>d2>1):
	print(cimi)
elif arma == KATANA:
	print(kata)
elif arma == SABRE:
	print(sabr)
else:
	print("Entrada invalida")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if arma == CIMITARRA and(D>0) and(10>d1>1) and(10>d2>1):
NameError: name 'CIMITARRA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:10:40) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ")
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == CIMITARRA and(D>0) and(10>d1>1) and(10>d2>1):
	print(cimi)
elif arma == KATANA:
	print(kata)
elif arma == SABRE:
	print(sabr)
else:
	print("Entrada invalida")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if arma == CIMITARRA and(D>0) and(10>d1>1) and(10>d2>1):
NameError: name 'CIMITARRA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:11:11) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ")
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and(D>0) and(10>d1>1) and(10>d2>1):
	print(cimi)
elif arma == "KATANA":
	print(kata)
elif arma == "SABRE":
	print(sabr)
else:
	print("Entrada invalida")


-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 19:11:23) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ")
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and(D>0) and(10>d1>1) and(10>d2>1):
	print(cimi)
elif arma == "KATANA":
	print(kata)
elif arma == "SABRE":
	print(sabr)
else:
	print("Entrada invalida")


-- EXECUTION TIME:
0.182898
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:11:27) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ")
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and(D>0) and(10>d1>1) and(10>d2>1):
	print(cimi)
elif arma == "KATANA":
	print(kata)
elif arma == "SABRE":
	print(sabr)
else:
	print("Entrada invalida")


-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:12:19) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ".upper())
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and(D>0) and(10>d1>1) and(10>d2>1):
	print(cimi)
elif arma == "KATANA" and (D>0) and(10>d1>1) and(10>d2>1):
	print(kata)
elif arma == "SABRE":
	print(sabr)
else:
	print("Entrada invalida")


-- OUTPUT:
ESCOLHA SUA ARMA (CIMITARRA/KATANA/SABRE): 23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:12:55) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ".upper())
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and(D>0) and(10>d1>1) and(10>d2>1):
	print(cimi)
elif arma == "KATANA" and(D>0) and(10>d1>1) and(10>d2>1):
	print(kata)
elif arma == "SABRE" and(D>0) and(10>d1>1) and(10>d2>1):
	print(sabr)
else:
	print("Entrada invalida")


-- OUTPUT:
ESCOLHA SUA ARMA (CIMITARRA/KATANA/SABRE): Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:14:02) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ".upper())
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and(D>0) and(1>d1>10) and(1>d2>10):
	print(cimi)
elif arma == "KATANA" and(D>0) and(1>d1>10) and(1>d2>10):
	print(kata)
elif arma == "SABRE" and(D>0) and(1>d1>10) and(1>d2>10):
	print(sabr)
else:
	print("Entrada invalida")


-- OUTPUT:
ESCOLHA SUA ARMA (CIMITARRA/KATANA/SABRE): Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:15:43) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ".upper())
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and(D>0) and(d1>1) and(d1<10) and(d2>1) and(d2<10):
	print(cimi)
elif arma == "KATANA" and(D>0) and(d1>1) and(d1<10) and(d2>1) and (d2<10):
	print(kata)
elif arma == "SABRE" and(D>0) and(d1>1) and (d1<10) and (d2>1) and (d2<10):
	print(sabr)
else:
	print("Entrada invalida")


-- OUTPUT:
ESCOLHA SUA ARMA (CIMITARRA/KATANA/SABRE): Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:17:11) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ".upper())
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and(D>0) and(10>d1>1) and (10>d2>1):
	print(cimi)
elif arma == "KATANA" and(D>0) and(10>d1>1) and(10>d2>1):
	print(kata)
elif arma == "SABRE" and(D>0) and(10>d1>10) and (10>d2>1):
	print(sabr)
else:
	print("Entrada invalida")


-- OUTPUT:
ESCOLHA SUA ARMA (CIMITARRA/KATANA/SABRE): Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:17:40) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ".upper())
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and(D>0) and(10>d1>1) and (10>d2>1):
	print(cimi)
elif arma == "KATANA" and(D>0) and(10>d1>1) and(10>d2>1):
	print(kata)
elif arma == "SABRE" and(D>0) and(10>d1>10) and (10>d2>1):
	print(sabr)
else:
	print("Entrada invalida")


-- OUTPUT:
ESCOLHA SUA ARMA (CIMITARRA/KATANA/SABRE): Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:18:00) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ".upper())
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and(D>0):
	print(cimi)
elif arma == "KATANA" and(D>0):
	print(kata)
elif arma == "SABRE" and(D>0):
	print(sabr)
else:
	print("Entrada invalida")


-- OUTPUT:
ESCOLHA SUA ARMA (CIMITARRA/KATANA/SABRE): 23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:18:09) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ".upper())
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and(D>0):
	print(cimi)
elif arma == "KATANA" and(D>0):
	print(kata)
elif arma == "SABRE" and(D>0):
	print(sabr)
else:
	print("Entrada invalida")


-- OUTPUT:
ESCOLHA SUA ARMA (CIMITARRA/KATANA/SABRE): 23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:18:37) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ")
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA":
	print(cimi)
elif arma == "KATANA":
	print(kata)
elif arma == "SABRE":
	print(sabr)
else:
	print("Entrada invalida")


-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:18:41) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ")
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA":
	print(cimi)
elif arma == "KATANA":
	print(kata)
elif arma == "SABRE":
	print(sabr)
else:
	print("Entrada invalida")


-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 19:18:52) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ")
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA":
	print(cimi)
elif arma == "KATANA":
	print(kata)
elif arma == "SABRE":
	print(sabr)
else:
	print("Entrada invalida")


-- EXECUTION TIME:
0.122802
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:18:53) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ")
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA":
	print(cimi)
elif arma == "KATANA":
	print(kata)
elif arma == "SABRE":
	print(sabr)
else:
	print("Entrada invalida")


-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:23:15) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ")
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA":
	print(cimi)
elif arma == "KATANA":
	print(kata)
elif arma == "SABRE":
	print(sabr)
else:
	print("Entrada invalida")


-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 19:23:24) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ")
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA":
	print(cimi)
elif arma == "KATANA":
	print(kata)
elif arma == "SABRE":
	print(sabr)
else:
	print("Entrada invalida")


-- EXECUTION TIME:
0.155344
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:23:25) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ")
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA":
	print(cimi)
elif arma == "KATANA":
	print(kata)
elif arma == "SABRE":
	print(sabr)
else:
	print("Entrada invalida")


-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:23:37) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA":
	print(cimi)
elif arma == "KATANA":
	print(kata)
elif arma == "SABRE":
	print(sabr)
else:
	print("Entrada invalida")


-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 19:23:44) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA":
	print(cimi)
elif arma == "KATANA":
	print(kata)
elif arma == "SABRE":
	print(sabr)
else:
	print("Entrada invalida")


-- EXECUTION TIME:
0.131212
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:23:45) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA":
	print(cimi)
elif arma == "KATANA":
	print(kata)
elif arma == "SABRE":
	print(sabr)
else:
	print("Entrada invalida")


-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:24:19) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and d1>1 and d1<10:
	print(cimi)
elif arma == "KATANA":
	print(kata)
elif arma == "SABRE":
	print(sabr)
else:
	print("Entrada invalida")


-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 19:24:32) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and d1>1 and d1<10:
	print(cimi)
elif arma == "KATANA":
	print(kata)
elif arma == "SABRE":
	print(sabr)
else:
	print("Entrada invalida")


-- EXECUTION TIME:
0.151461
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:24:32) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and d1>1 and d1<10:
	print(cimi)
elif arma == "KATANA":
	print(kata)
elif arma == "SABRE":
	print(sabr)
else:
	print("Entrada invalida")


-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:25:35) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and 10>d1>1 and 10>d2>1:
	print(cimi)
elif arma == "KATANA" and D>0 and 10>d1>1 and 10>d2>1:
	print(kata)
elif arma == "SABRE" and D>0 and 10>d1>1 and 10>d2>1:
	print(sabr)
else:
	print("Entrada invalida")


-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 19:25:45) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and 10>d1>1 and 10>d2>1:
	print(cimi)
elif arma == "KATANA" and D>0 and 10>d1>1 and 10>d2>1:
	print(kata)
elif arma == "SABRE" and D>0 and 10>d1>1 and 10>d2>1:
	print(sabr)
else:
	print("Entrada invalida")


-- EXECUTION TIME:
0.155017
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:25:46) 
-- CODE:
arma = input("escolha sua arma (cimitarra/katana/sabre): ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and 10>d1>1 and 10>d2>1:
	print(cimi)
elif arma == "KATANA" and D>0 and 10>d1>1 and 10>d2>1:
	print(kata)
elif arma == "SABRE" and D>0 and 10>d1>1 and 10>d2>1:
	print(sabr)
else:
	print("Entrada invalida")


-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:26:20) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and 10>d1>1 and 10>d2>1:
	print(cimi)
elif arma == "KATANA" and D>0 and 10>d1>1 and 10>d2>1:
	print(kata)
elif arma == "SABRE" and D>0 and 10>d1>1 and 10>d2>1:
	print(sabr)
else:
	print("Entrada invalida")


-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:26:48) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and 10>d1>1 and 10>d2>1:
	print(cimi)
elif arma == "KATANA" and D>0 and 10>d1>1 and 10>d2>1:
	print(kata)
elif arma == "SABRE" and D>0 and 10>d1>1 and 10>d2>1:
	print(sabr)
else:
	print("Entrada invalida")


-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:27:15) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1,10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1,10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1,10>d2>1):
	print(sabr)
else:
	print("Entrada invalida")


-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 19:27:24) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1,10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1,10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1,10>d2>1):
	print(sabr)
else:
	print("Entrada invalida")


-- EXECUTION TIME:
0.163002
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:27:27) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1,10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1,10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1,10>d2>1):
	print(sabr)
else:
	print("Entrada invalida")


-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:27:45) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1,10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1,10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1,10>d2>1):
	print(sabr)
else:
	print("Entrada invalida")

print(arma)
-- OUTPUT:
23
SABRE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:27:54) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1,10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1,10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1,10>d2>1):
	print(sabr)
else:

-- ERROR:
File "XXXX", line 16
    
         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 19:27:55) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1,10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1,10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1,10>d2>1):
	print(sabr)
else:

-- EXECUTION TIME:
0.152403
-- ERROR:
  File "/home/codebench/codes/1721/3068/main.py", line 16
    
         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:27:56) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1,10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1,10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1,10>d2>1):
	print(sabr)
else:

-- ERROR:
File "XXXX", line 16
    
         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 19:28:34) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1,10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1,10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1,10>d2>1):
	print(sabr)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.156669
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:28:35) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1,10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1,10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1,10>d2>1):
	print(sabr)
else:
	print("Entrada invalida")
-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:28:42) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1,10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1,10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1,10>d2>1):
	print(sabr)
else:
	print("Entrada invalida")
-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:29:36) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1,10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1,10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1,10>d2>1):
	print(sabr)
elif arma != "CIMITARRA","KATANA","SABRE" and D<0 and not(10>d1>1,10>d2>1):
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 15
    elif arma != "CIMITARRA","KATANA","SABRE" and D<0 and not(10>d1>1,10>d2>1):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:29:54) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1,10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1,10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1,10>d2>1):
	print(sabr)
elif arma != "CIMITARRA" or "KATANA" or "SABRE" and D<0 and not(10>d1>1,10>d2>1):
	print("Entrada invalida")
-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 19:30:01) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1,10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1,10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1,10>d2>1):
	print(sabr)
elif arma != "CIMITARRA" or "KATANA" or "SABRE" and D<0 and not(10>d1>1,10>d2>1):
	print("Entrada invalida")
-- EXECUTION TIME:
0.151282
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:30:03) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1,10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1,10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1,10>d2>1):
	print(sabr)
elif arma != "CIMITARRA" or "KATANA" or "SABRE" and D<0 and not(10>d1>1,10>d2>1):
	print("Entrada invalida")
-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:30:34) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1,10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1,10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1,10>d2>1):
	print(sabr)
else:
	print("Entrada invalida")
-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 19:30:43) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1,10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1,10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1,10>d2>1):
	print(sabr)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.11821
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:30:44) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1,10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1,10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1,10>d2>1):
	print(sabr)
else:
	print("Entrada invalida")
-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 19:31:36) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = float(input("digite sua destreza: "))
d1 = float(input("digite o valor sorteado no dado 1: "))
d2 = float(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1,10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1,10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1,10>d2>1):
	print(sabr)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.182316
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23.0
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20.0
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
52.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 19:31:37) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = float(input("digite sua destreza: "))
d1 = float(input("digite o valor sorteado no dado 1: "))
d2 = float(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1,10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1,10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1,10>d2>1):
	print(sabr)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.131642
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23.0
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20.0
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
52.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:31:37) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = float(input("digite sua destreza: "))
d1 = float(input("digite o valor sorteado no dado 1: "))
d2 = float(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1,10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1,10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1,10>d2>1):
	print(sabr)
else:
	print("Entrada invalida")
-- OUTPUT:
23.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:31:42) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = float(input("digite sua destreza: "))
d1 = float(input("digite o valor sorteado no dado 1: "))
d2 = float(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1,10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1,10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1,10>d2>1):
	print(sabr)
else:
	print("Entrada invalida")
-- OUTPUT:
23.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 19:31:47) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = float(input("digite sua destreza: "))
d1 = float(input("digite o valor sorteado no dado 1: "))
d2 = float(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1,10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1,10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1,10>d2>1):
	print(sabr)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.207029
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23.0
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20.0
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
52.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:31:48) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = float(input("digite sua destreza: "))
d1 = float(input("digite o valor sorteado no dado 1: "))
d2 = float(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1,10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1,10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1,10>d2>1):
	print(sabr)
else:
	print("Entrada invalida")
-- OUTPUT:
23.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:32:39) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1,10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1,10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1,10>d2>1):
	print(sabr)
else:
	print("Entrada invalida")
-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 19:32:46) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1,10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1,10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1,10>d2>1):
	print(sabr)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.15611
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:32:47) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1,10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1,10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1,10>d2>1):
	print(sabr)
else:
	print("Entrada invalida")
-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:34:17) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1,10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1,10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1,10>d2>1):
	print(sabr)
else:
	print("Entrada invalida")
-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:36:32) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1) and (10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1) and (10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1) and (10>d2>1):
	print(sabr)
else:
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 19:36:41) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1) and (10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1) and (10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1) and (10>d2>1):
	print(sabr)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.198444
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:36:42) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1) and (10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1) and (10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1) and (10>d2>1):
	print(sabr)
else:
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:36:59) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1) and (10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1) and (10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1) and (10>d2>1):
	print(sabr)
else:
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:37:33) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1) and (10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1) and (10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1) and (10>d2>1):
	print(sabr)
else:
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:37:39) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1) and (10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1) and (10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1) and (10>d2>1):
	print(sabr)
else:
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:37:49) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>d1>1) and (10>d2>1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>d1>1) and (10>d2>1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>d1>1) and (10>d2>1):
	print(sabr)
else:
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:41:13) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>=d1>1) and (10>=d2>=1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>=d1>=1) and (10>=d2>=1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>=d1>=1) and (10>=d2>=1):
	print(sabr)
else:
	print("Entrada invalida")
-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 19:41:20) 
-- CODE:
arma = input("escolha sua arma: ").upper()
D = int(input("digite sua destreza: "))
d1 = int(input("digite o valor sorteado no dado 1: "))
d2 = int(input("digite o valor sorteado no dado 2: "))
soma = d1 + d2
cimi = 2 * soma + 2 * D
kata = 2 * soma + D
sabr = soma + 2 * D
if arma == "CIMITARRA" and D>0 and(10>=d1>1) and (10>=d2>=1):
	print(cimi)
elif arma == "KATANA" and D>0 and(10>=d1>=1) and (10>=d2>=1):
	print(kata)
elif arma == "SABRE" and D>0 and(10>=d1>=1) and (10>=d2>=1):
	print(sabr)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.235955
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
